Rename to Kay Kit

--- a/addons/kaykit-dungeon-kit/plugin.cfg
+++ b/addons/kaykit-dungeon-kit/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
-name="CoyoteCentral"
-description=""
+name="KayKit Dungeon Kit"
+description="A batteries-included kit built around KayKit's Dungeon assets. Built for Coyote Central"
 author="Diane Nguyen"
-version=""
-script="coyote_central.gd"
+version="indev"
+script="kaykit_dungeon_kit.gd"
